--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
     "name": "__MSG_extName__",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "manifest_version": 3,
     "description": "__MSG_extDesc__",
+    "homepage_url": "https://github.com/sameerdash2/javascript-blocker",
     "default_locale": "en",
     "permissions": [
         "activeTab",
